fix package name issue

--- a/Assets/Script/Editor/package.json
+++ b/Assets/Script/Editor/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.rStar.editorforunity",
+  "name": "com.rstar.editorforunity",
   "displayName": "rStar - Editor",
   "description": "more powerful features for unity editor.",
   "version": "1.0.0",
