--- a/Assets/Script/Editor/OpenProperties.Editor.asmdef
+++ b/Assets/Script/Editor/OpenProperties.Editor.asmdef
@@ -1,18 +1,20 @@
 {
-  "name": "OpenProperties.Editor",
-  "rootNamespace": "",
-  "references": [
-    "GUID:5b6296113290ac9418cb9743b4854ec9"
-  ],
-  "includePlatforms": [
-    "Editor"
-  ],
-  "excludePlatforms": [],
-  "allowUnsafeCode": false,
-  "overrideReferences": false,
-  "precompiledReferences": [],
-  "autoReferenced": true,
-  "defineConstraints": [],
-  "versionDefines": [],
-  "noEngineReferences": false
+    "name": "OpenProperties.Editor",
+    "rootNamespace": "",
+    "references": [
+        "GUID:5b6296113290ac9418cb9743b4854ec9"
+    ],
+    "includePlatforms": [
+        "Editor"
+    ],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": true,
+    "precompiledReferences": [
+        "Smart-Inspector-Harmony.dll"
+    ],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
