--- a/Assets/Main/OpenProperties.Editor.asmdef
+++ b/Assets/Main/OpenProperties.Editor.asmdef
@@ -1,20 +1,23 @@
-{
-    "name": "OpenProperties.Editor",
-    "rootNamespace": "",
-    "references": [
-        "GUID:5b6296113290ac9418cb9743b4854ec9"
-    ],
-    "includePlatforms": [
-        "Editor"
-    ],
-    "excludePlatforms": [],
-    "allowUnsafeCode": false,
-    "overrideReferences": true,
-    "precompiledReferences": [
-        "Smart-Inspector-Harmony.dll"
-    ],
-    "autoReferenced": true,
-    "defineConstraints": [],
-    "versionDefines": [],
-    "noEngineReferences": false
+﻿{
+  "name": "OpenProperties.Editor",
+  "rootNamespace": "",
+  "references": [
+    "Kogane.CheckBoxWindow",
+    "Kogane.JsonAssemblyDefinition",
+    "Unity.PlayerPrefsEditor.Editor",
+    "UnityEditor.UI"
+  ],
+  "includePlatforms": [
+    "Editor"
+  ],
+  "excludePlatforms": [],
+  "allowUnsafeCode": false,
+  "overrideReferences": true,
+  "precompiledReferences": [
+    "Smart-Inspector-Harmony.dll"
+  ],
+  "autoReferenced": false,
+  "defineConstraints": [],
+  "versionDefines": [],
+  "noEngineReferences": false
 }
